prod/ingress-nginx/config/k8s-apiserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapi
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: moin.k8s.scs.community
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - moin.k8s.scs.community
    secretName: moin-api
  rules:
  - host: moin.k8s.scs.community
    http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              number: 443
        pathType: ImplementationSpecific
